--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navbar -->
     <nav id="navbar">
-        <div class="navbar__logo">            
+        <div class="navbar__logo">
             <i class="fab fa-diaspora"></i>
             <a href="#">Louis</a>
         </div>
@@ -31,6 +31,13 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/profile.jpg" alt="Louis's profile photo" class="home__avatar">
+        <h1 class="home__title">Hello <br/>I'm Donghyeon</h1>
+        <h2 class="home__description">프론트엔드와 백엔드를 넘나드는 준비된인재</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
