--- a/index.html
+++ b/index.html
@@ -39,7 +39,55 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>
+            안녕하세요 저는 정동현입니다.<br/>
+            호서대학교 컴퓨터공학과 4년과정을 무사히 졸업하였고,<br/>
+            모바일 앱, 임베디드 프로그래밍, 웹이 주요 관심분야였고<br/>
+            이 중에서 웹이 가장 재미있고 잘 맞는거 같습니다<br/>                 
+        </p>
+        <div class="about__majors">
+            <div class="mjor">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">
+                    HTML, CSS, JavaScript, TypeScript,<br/>
+                    React, Vue, Web APIs
+                </div>
+            </div>
+            <div class="mjor">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">
+                    HTML, CSS, JavaScript, TypeScript,<br/>
+                    React, Vue, Web APIs
+                </div>
+            </div>
+            <div class="mjor">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">
+                    HTML, CSS, JavaScript, TypeScript,<br/>
+                    React, Vue, Web APIs
+                </div>
+            </div>
+            <div class="about__jobs">
+                <div class="job">
+                    <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo">
+                    <p class="job__name">메디코넥스 IoT개발팀</p>
+                    <p class="job__period">2019/12 ~ 2020/02</p>
+                </div>
+                <div class="job"></div>
+            </div>
+        </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
