--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <!-- Home -->
     <section id="home">
-        <img src="imgs/profile.jpg" alt="Louis's profile photo" class="home__avatar">
+        <img src="imgs/profile.jpg" alt="Louis's profile photo" class="home__avatar" height="300px">
         <h1 class="home__title">Hello <br/>I'm Donghyeon</h1>
         <h2 class="home__description">프론트엔드와 백엔드를 넘나드는 준비된인재</h2>
         <button class="home__contact">Contact Me</button>
@@ -89,7 +89,48 @@
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+            전체적인 소프트웨어 라이프 사이클에 대해서 이해하고있고
+            새로운 것을 배우는걸 좋아합니다
+            어떠한 상황에서도 충분히 잘 적응할 수 있으며,
+            일을할때 계획을 세워 시간을 지켜가며 합니다
+        </p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>HTML</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Visual Studio</span></li>
+                        <li><span>Android Studio</span></li>
+                        <li><span>Fill Zilla</span></li>
+                        <li><span>Putty</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>                        
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimonials -->
