--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             전체적인 소프트웨어 라이프 사이클에 대해서 이해하고있고
             새로운 것을 배우는걸 좋아합니다
             어떠한 상황에서도 충분히 잘 적응할 수 있으며,
-            일을할때 계획을 세워 시간을 지켜가며 합니다
+            일을할때 계획을 세우고 시간을 지켜가며 합니다
         </p>
         <div class="skillset">
             <div class="skillset__left">
@@ -132,7 +132,40 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All <span class="category__count">3</span></button>
+            <button class="category__btn">Front-end <span class="category__count">2</span></button>
+            <button class="category__btn">Back-end <span class="category__count">1</span></button>
+            <button class="category__btn">Mobile <span class="category__count">5</span></button>
+        </div>
+
+        <div class="work__projects">
+            <a href="" class="project" target="blank">
+                <img src="" alt="">    
+                <div class="project__description">
+                    <h3>프로젝트 명</h3>
+                    <span>사용된 언어 ...</span>
+                </div>
+            </a>
+            <a href="" class="project" data-type="front-end">
+                <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
+                <div class="project__description">
+                    <h3>프론트엔드</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+            <a href="" class="project" data-type="back-end">
+                <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
+                <div class="project__description">
+                    <h3>백엔드</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
