--- a/index.html
+++ b/index.html
@@ -167,7 +167,24 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See What they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">
+                <div class="testimonial__speech-bubble">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br/>
+                        Non eligendi ipsam perspiciatis quae labore provident <br/>
+                        placeat praesentium facere ad repudiandae, atque enim <br/>
+                        neque, quaerat deleniti. Facere illum itaque hic reprehenderit?
+                    </p>
+                    <p class="name"><a href="">People</a>/Mediconex</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
 </body>
