--- a/index.html
+++ b/index.html
@@ -186,6 +186,15 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">2848048ehgu@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/louis-25" target="_blnk">
+                <i class="fab fa-github"></i>
+            </a>            
+        </div>
+        <p class="contact__rights">2021 Louis's Portfolio - All rights reversed</p>
+    </section>
 </body>
 </html>
