--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
-                <li class="navbar_menu__item">Home</li>
-                <li class="navbar_menu__item">About</li>
-                <li class="navbar_menu__item">Skills</li>
-                <li class="navbar_menu__item">My work</li>
-                <li class="navbar_menu__item">Testimonial</li>
-                <li class="navbar_menu__item">Contact</li>
+                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item">About</li>
+                <li class="navbar__menu__item">Skills</li>
+                <li class="navbar__menu__item">My work</li>
+                <li class="navbar__menu__item">Testimonial</li>
+                <li class="navbar__menu__item active">Contact</li>
             </ul>
         </div>
     </nav>
