--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>
             안녕하세요 저는 정동현입니다.<br/>
@@ -52,7 +52,7 @@
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
                     HTML, CSS, JavaScript, TypeScript,<br/>
                     React, Vue, Web APIs
@@ -60,9 +60,9 @@
             </div>
             <div class="mjor">
                 <div class="major__icon">
-                    <i class="fab fa-html5"></i>
+                    <i class="fas fa-server"></i>
                 </div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">back-end</h2>
                 <div class="major__description">
                     HTML, CSS, JavaScript, TypeScript,<br/>
                     React, Vue, Web APIs
@@ -70,26 +70,34 @@
             </div>
             <div class="mjor">
                 <div class="major__icon">
-                    <i class="fab fa-html5"></i>
+                    <i class="fas fa-mobile"></i>
                 </div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Mobile</h2>
                 <div class="major__description">
                     HTML, CSS, JavaScript, TypeScript,<br/>
                     React, Vue, Web APIs
                 </div>
-            </div>
-            <div class="about__jobs">
-                <div class="job">
-                    <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo">
+            </div>                        
+        </div>
+        <div class="about__jobs" class="section">
+            <div class="job">
+                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo">
+                <div class="job__description">
                     <p class="job__name">메디코넥스 IoT개발팀</p>
                     <p class="job__period">2019/12 ~ 2020/02</p>
                 </div>
-                <div class="job"></div>
+            </div>
+            <div class="job">
+                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo">
+                <div class="job__description">
+                    <p class="job__name">메디코넥스 IoT개발팀</p>
+                    <p class="job__period">2019/12 ~ 2020/02</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -132,7 +140,7 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -167,7 +175,7 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
         <h1>Testimonials</h1>
         <h3>See What they say about me</h3>
         <div class="testimonials">
@@ -186,7 +194,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">2848048ehgu@gmail.com</h2>
         <div class="contact__links">
