--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container" >
         <h1>About me</h1>
         <p>
             안녕하세요 저는 정동현입니다.<br/>
@@ -97,7 +97,7 @@
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills" class="section">
+    <section id="skill" class="section ">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -108,20 +108,47 @@
         </p>
         <div class="skillset">
             <div class="skillset__left">
-                <h3 class="skillset__title">Skills</h3>
+                <h2 class="skillset__title">Skills</h2>
                 <div class="skill">
-                    <div class="skill_description">
+                    <div class="skill__description">
                         <span>HTML</span>
                         <span>99%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill_value"></div>
+                        <div class="skill__value" style="width:99%"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width:99%"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width:99%"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width:99%"></div>
                     </div>
                 </div>
             </div>
             <div class="skillset__right">
                 <div class="tools">
-                    <h3 class="skillset__title">Tools</h3>
+                    <h2 class="skillset__title">Tools</h2>
                     <ul class="tools__list">
                         <li><span>Visual Studio Code</span></li>
                         <li><span>Visual Studio</span></li>
@@ -131,7 +158,7 @@
                     </ul>
                 </div>
                 <div class="etc">
-                    <h3 class="skillset__title">Etc</h3>
+                    <h2 class="skillset__title">Etc</h2>
                     <ul class="etc__list">
                         <li><span>Git</span></li>                        
                     </ul>
