--- a/index.html
+++ b/index.html
@@ -171,20 +171,13 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn">All <span class="category__count">3</span></button>
+            <button class="category__btn active">All <span class="category__count">3</span></button>
             <button class="category__btn">Front-end <span class="category__count">2</span></button>
             <button class="category__btn">Back-end <span class="category__count">1</span></button>
             <button class="category__btn">Mobile <span class="category__count">5</span></button>
         </div>
 
-        <div class="work__projects">
-            <a href="" class="project" target="blank">
-                <img src="" alt="">    
-                <div class="project__description">
-                    <h3>프로젝트 명</h3>
-                    <span>사용된 언어 ...</span>
-                </div>
-            </a>
+        <div class="work__projects">            
             <a href="" class="project" data-type="front-end">
                 <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
@@ -196,6 +189,13 @@
                 <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
                     <h3>백엔드</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+            <a href="" class="project" data-type="back-end">
+                <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
+                <div class="project__description">
+                    <h3>모바일</h3>
                     <span>Explanation</span>
                 </div>
             </a>
