--- a/index.html
+++ b/index.html
@@ -210,13 +210,25 @@
                 <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">
                 <div class="testimonial__speech-bubble">
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br/>
-                        Non eligendi ipsam perspiciatis quae labore provident <br/>
-                        placeat praesentium facere ad repudiandae, atque enim <br/>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Non eligendi ipsam perspiciatis quae labore provident 
+                        placeat praesentium facere ad repudiandae, atque enim 
                         neque, quaerat deleniti. Facere illum itaque hic reprehenderit?
                     </p>
                     <p class="name"><a href="">People</a>/Mediconex</p>
                 </div>
+            </div>
+            <div class="testimonial">
+                <div class="testimonial__speech-bubble">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Non eligendi ipsam perspiciatis quae labore provident 
+                        placeat praesentium facere ad repudiandae, atque enim 
+                        neque, quaerat deleniti. Facere illum itaque hic reprehenderit?
+                    </p>
+                    <p class="name"><a href="">People</a>/Mediconex</p>
+                </div>
+                <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">                
             </div>
         </div>
     </section>
