--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <p>
             안녕하세요 저는 정동현입니다.<br/>
             호서대학교 컴퓨터공학과 4년과정을 무사히 졸업하였고,<br/>
-            모바일 앱, 임베디드 프로그래밍, 웹이 주요 관심분야였고<br/>
-            이 중에서 웹이 가장 재미있고 잘 맞는거 같습니다<br/>                 
+            모바일 앱, 임베디드 프로그래밍, 웹이 주요 관심분야입니다<br/>                             
         </p>
         <div class="about__majors">
             <div class="mjor">
@@ -235,7 +234,7 @@
     <!-- Contact -->
     <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
-        <h2 class="contact__email">2848048ehgu@gmail.com</h2>
+        <h2 class="contact__email">20151577@vision.hoseo.edu</h2>
         <div class="contact__links">
             <a href="https://github.com/louis-25" target="_blnk">
                 <i class="fab fa-github"></i>
