--- a/index.html
+++ b/index.html
@@ -97,73 +97,76 @@
     </section>
     <!-- Skills -->
     <section id="skill" class="section ">
-        <h1>Skills</h1>
-        <h2>Skills & Attributes</h2>
-        <p>
-            전체적인 소프트웨어 라이프 사이클에 대해서 이해하고있고
-            새로운 것을 배우는걸 좋아합니다
-            어떠한 상황에서도 충분히 잘 적응할 수 있으며,
-            일을할때 계획을 세우고 시간을 지켜가며 합니다
-        </p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h2 class="skillset__title">Skills</h2>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>HTML</span>
-                        <span>99%</span>
+        <div class="section__container">
+            <h1>Skills</h1>
+            <h2>Skills & Attributes</h2>
+            <p>
+                전체적인 소프트웨어 라이프 사이클에 대해서 이해하고있고
+                새로운 것을 배우는걸 좋아합니다
+                어떠한 상황에서도 충분히 잘 적응할 수 있으며,
+                일을할때 계획을 세우고 시간을 지켜가며 합니다
+            </p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h2 class="skillset__title">Skills</h2>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>HTML</span>
+                            <span>99%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:99%"></div>
+                        </div>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:99%"></div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>HTML</span>
+                            <span>99%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:99%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>HTML</span>
+                            <span>99%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:99%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>HTML</span>
+                            <span>99%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:99%"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>HTML</span>
-                        <span>99%</span>
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h2 class="skillset__title">Tools</h2>
+                        <ul class="tools__list">
+                            <li><span>Visual Studio Code</span></li>
+                            <li><span>Visual Studio</span></li>
+                            <li><span>Android Studio</span></li>
+                            <li><span>Fill Zilla</span></li>
+                            <li><span>Putty</span></li>
+                        </ul>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:99%"></div>
+                    <div class="etc">
+                        <h2 class="skillset__title">Etc</h2>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>                        
+                        </ul>
                     </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>HTML</span>
-                        <span>99%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:99%"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>HTML</span>
-                        <span>99%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:99%"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h2 class="skillset__title">Tools</h2>
-                    <ul class="tools__list">
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>Visual Studio</span></li>
-                        <li><span>Android Studio</span></li>
-                        <li><span>Fill Zilla</span></li>
-                        <li><span>Putty</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h2 class="skillset__title">Etc</h2>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>                        
-                    </ul>
                 </div>
             </div>
         </div>
+        
     </section>
     <!-- Work -->
     <section id="work" class="section">
@@ -202,34 +205,36 @@
     </section>
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-        <h1>Testimonials</h1>
-        <h3>See What they say about me</h3>
-        <div class="testimonials">
-            <div class="testimonial">
-                <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">
-                <div class="testimonial__speech-bubble">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Non eligendi ipsam perspiciatis quae labore provident 
-                        placeat praesentium facere ad repudiandae, atque enim 
-                        neque, quaerat deleniti. Facere illum itaque hic reprehenderit?
-                    </p>
-                    <p class="name"><a href="">People</a>/Mediconex</p>
+        <div class="section__container">
+            <h1>Testimonials</h1>
+            <h3>See What they say about me</h3>
+            <div class="testimonials">
+                <div class="testimonial">
+                    <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">
+                    <div class="testimonial__speech-bubble">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Non eligendi ipsam perspiciatis quae labore provident 
+                            placeat praesentium facere ad repudiandae, atque enim 
+                            neque, quaerat deleniti. Facere illum itaque hic reprehenderit?
+                        </p>
+                        <p class="name"><a href="">People</a>/Mediconex</p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial__speech-bubble">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Non eligendi ipsam perspiciatis quae labore provident 
+                            placeat praesentium facere ad repudiandae, atque enim 
+                            neque, quaerat deleniti. Facere illum itaque hic reprehenderit?
+                        </p>
+                        <p class="name"><a href="">People</a>/Mediconex</p>
+                    </div>
+                    <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">                
                 </div>
             </div>
-            <div class="testimonial">
-                <div class="testimonial__speech-bubble">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Non eligendi ipsam perspiciatis quae labore provident 
-                        placeat praesentium facere ad repudiandae, atque enim 
-                        neque, quaerat deleniti. Facere illum itaque hic reprehenderit?
-                    </p>
-                    <p class="name"><a href="">People</a>/Mediconex</p>
-                </div>
-                <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">                
-            </div>
-        </div>
+        </div>        
     </section>
     <!-- Contact -->
     <section id="contact" class="section">
