--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <li class="navbar__menu__item active">Contact</li>
             </ul>
         </div>
+        <!--Toggle button-->
+        <button class="navbar__toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <!-- Home -->
     <section id="home">
@@ -47,7 +51,7 @@
             모바일 앱, 임베디드 프로그래밍, 웹이 주요 관심분야입니다<br/>                             
         </p>
         <div class="about__majors">
-            <div class="mjor">
+            <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
@@ -57,7 +61,7 @@
                     React, Vue, Web APIs
                 </div>
             </div>
-            <div class="mjor">
+            <div class="major">
                 <div class="major__icon">
                     <i class="fas fa-server"></i>
                 </div>
@@ -67,7 +71,7 @@
                     React, Vue, Web APIs
                 </div>
             </div>
-            <div class="mjor">
+            <div class="major">
                 <div class="major__icon">
                     <i class="fas fa-mobile"></i>
                 </div>
