--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__item">Home</li>
-                <li class="navbar__menu__item">About</li>
-                <li class="navbar__menu__item">Skills</li>
-                <li class="navbar__menu__item">My work</li>
-                <li class="navbar__menu__item">Testimonial</li>
-                <li class="navbar__menu__item active">Contact</li>
+                <li class="navbar__menu__item" data-link='#home'>Home</li>
+                <li class="navbar__menu__item" data-link='#about'>About</li>
+                <li class="navbar__menu__item" data-link='#skill'>Skills</li>
+                <li class="navbar__menu__item" data-link='#work'>My work</li>
+                <li class="navbar__menu__item" data-link='#testimonials'>Testimonial</li>
+                <li class="navbar__menu__item active" data-link='#contact'>Contact</li>
             </ul>
         </div>
-        <!--Toggle button-->
+        <!--Toggle button - 햄버거-->
         <button class="navbar__toggle-btn">
             <i class="fas fa-bars"></i>
         </button>
