--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
+                <!-- data-link는 section id를 불러온다 -->
                 <li class="navbar__menu__item" data-link='#home'>Home</li>
                 <li class="navbar__menu__item" data-link='#about'>About</li>
                 <li class="navbar__menu__item" data-link='#skill'>Skills</li>
@@ -40,7 +41,7 @@
         <img src="imgs/profile.jpg" alt="Louis's profile photo" class="home__avatar" height="300px">
         <h1 class="home__title">Hello <br/>I'm Donghyeon</h1>
         <h2 class="home__description">프론트엔드와 백엔드를 넘나드는 준비된인재</h2>
-        <button class="home__contact">Contact Me</button>
+        <button class="home__contact" data-link='#contact'>Contact Me</button>
     </section>
     <!-- About -->
     <section id="about" class="section section__container" >
