--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
     </nav>
     <!-- Home -->
     <section id="home">
-        <img src="imgs/profile.jpg" alt="Louis's profile photo" class="home__avatar" height="300px">
-        <h1 class="home__title">Hello <br/>I'm Donghyeon</h1>
-        <h2 class="home__description">프론트엔드와 백엔드를 넘나드는 준비된인재</h2>
-        <button class="home__contact" data-link='#contact'>Contact Me</button>
+        <div class="home__container">
+            <img src="imgs/profile.jpg" alt="Louis's profile photo" class="home__avatar" height="300px">        
+            <h1 class="home__title">Hello <br/>I'm Donghyeon</h1>
+            <h2 class="home__description">프론트엔드와 백엔드를 넘나드는 준비된인재</h2>        
+            <button class="home__contact" data-link='#contact'>Contact Me</button>
+        </div>
     </section>
     <!-- About -->
     <section id="about" class="section section__container" >
