--- a/index.html
+++ b/index.html
@@ -254,5 +254,10 @@
         </div>
         <p class="contact__rights">2021 Louis's Portfolio - All rights reversed</p>
     </section>
+
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html>
