--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn active">All <span class="category__count">3</span></button>
-            <button class="category__btn">Front-end <span class="category__count">2</span></button>
-            <button class="category__btn">Back-end <span class="category__count">1</span></button>
-            <button class="category__btn">Mobile <span class="category__count">5</span></button>
+            <button class="category__btn active" data-filter="*">All <span class="category__count">3</span></button>
+            <button class="category__btn" data-filter="front-end">Front-end <span class="category__count">2</span></button>
+            <button class="category__btn" data-filter="back-end">Back-end <span class="category__count">1</span></button>
+            <button class="category__btn" data-filter="mobile">Mobile <span class="category__count">5</span></button>
         </div>
 
         <div class="work__projects">            
@@ -201,7 +201,7 @@
                     <span>Explanation</span>
                 </div>
             </a>
-            <a href="" class="project" data-type="back-end">
+            <a href="" class="project" data-type="mobile">
                 <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
                     <h3>모바일</h3>
