JS:Navbar menu toggle & Projet UI edit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#">Louis</a>
         </div>
         <div class="navbar__menu">
-            <ul class="navbar__menu">
+            <ul class="navbar__menu open">
                 <!-- data-link는 section id를 불러온다 -->
                 <li class="navbar__menu__item" data-link='#home'>Home</li>
                 <li class="navbar__menu__item" data-link='#about'>About</li>
