--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <i class="fab fa-diaspora"></i>
+            <i class="fas fa-at"></i>
             <a href="#">Louis</a>
         </div>
         <div class="navbar__menu">
@@ -87,14 +87,14 @@
         </div>
         <div class="about__jobs" class="section">
             <div class="job">
-                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo">
+                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
                 <div class="job__description">
                     <p class="job__name">메디코넥스 IoT개발팀</p>
                     <p class="job__period">2019/12 ~ 2020/02</p>
                 </div>
             </div>
             <div class="job">
-                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo">
+                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
                 <div class="job__description">
                     <p class="job__name">메디코넥스 IoT개발팀</p>
                     <p class="job__period">2019/12 ~ 2020/02</p>
