--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
         </div>
         <div class="about__jobs" class="section">
             <div class="job">
-                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
+                <img src="./imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
                 <div class="job__description">
                     <p class="job__name">메디코넥스 IoT개발팀</p>
                     <p class="job__period">2019/12 ~ 2020/02</p>
                 </div>
             </div>
             <div class="job">
-                <img src="/imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
+                <img src="./imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
                 <div class="job__description">
                     <p class="job__name">메디코넥스 IoT개발팀</p>
                     <p class="job__period">2019/12 ~ 2020/02</p>
@@ -188,21 +188,21 @@
 
         <div class="work__projects">            
             <a href="" class="project" data-type="front-end">
-                <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
+                <img src="./imgs/favicon.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
                     <h3>프론트엔드</h3>
                     <span>Explanation</span>
                 </div>
             </a>
             <a href="" class="project" data-type="back-end">
-                <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
+                <img src="./imgs/favicon.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
                     <h3>백엔드</h3>
                     <span>Explanation</span>
                 </div>
             </a>
             <a href="" class="project" data-type="mobile">
-                <img src="/imgs/favicon.png" alt="" class="project__img" width="300rem">
+                <img src="./imgs/favicon.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
                     <h3>모바일</h3>
                     <span>Explanation</span>
@@ -217,7 +217,7 @@
             <h3>See What they say about me</h3>
             <div class="testimonials">
                 <div class="testimonial">
-                    <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">
+                    <img src="./imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">
                     <div class="testimonial__speech-bubble">
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -238,7 +238,7 @@
                         </p>
                         <p class="name"><a href="">People</a>/Mediconex</p>
                     </div>
-                    <img src="/imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">                
+                    <img src="./imgs/testimonial/favicon.png" alt="" class="testimonial__avatar" height="300rem">                
                 </div>
             </div>
         </div>        
