--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="navbar__menu__item" data-link='#about'>About</li>
                 <li class="navbar__menu__item" data-link='#skill'>Skills</li>
                 <li class="navbar__menu__item" data-link='#work'>My work</li>
-                <li class="navbar__menu__item" data-link='#testimonials'>Testimonial</li>
+                <!-- <li class="navbar__menu__item" data-link='#testimonials'>Testimonial</li> -->
                 <li class="navbar__menu__item" data-link='#contact'>Contact</li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
     <section id="about" class="section section__container" >
         <h1>About me</h1>
         <p>
-            안녕하세요 저는 정동현입니다.<br/>
+            안녕하세요 개발자 정동현입니다.<br/>
             호서대학교 컴퓨터공학과 4년과정을 무사히 졸업하였고,<br/>
             모바일 앱, 임베디드 프로그래밍, 웹이 주요 관심분야입니다<br/>                             
         </p>
@@ -60,8 +60,8 @@
                 </div>
                 <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
-                    HTML, CSS, JavaScript, TypeScript,<br/>
-                    React, Vue, Web APIs
+                    HTML, CSS, JavaScript<br/>
+                    React, Vue
                 </div>
             </div>
             <div class="major">
@@ -70,8 +70,7 @@
                 </div>
                 <h2 class="major__title">back-end</h2>
                 <div class="major__description">
-                    HTML, CSS, JavaScript, TypeScript,<br/>
-                    React, Vue, Web APIs
+                    React, Vue, Django, Node.js
                 </div>
             </div>
             <div class="major">
@@ -80,26 +79,18 @@
                 </div>
                 <h2 class="major__title">Mobile</h2>
                 <div class="major__description">
-                    HTML, CSS, JavaScript, TypeScript,<br/>
-                    React, Vue, Web APIs
+                    Android
                 </div>
             </div>                        
         </div>
         <div class="about__jobs" class="section">
-            <div class="job">
-                <img src="./imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
+            <a href="http://www.mediconex.co.kr/" target="_blank" class="job">
+                <img src="./imgs/jobs/mediconex.png" alt="mediconex" class="job__logo" width="150px">
                 <div class="job__description">
                     <p class="job__name">메디코넥스 IoT개발팀</p>
                     <p class="job__period">2019/12 ~ 2020/02</p>
                 </div>
-            </div>
-            <div class="job">
-                <img src="./imgs/jobs/mediconex.jpg" alt="mediconex" class="job__logo" width="150px">
-                <div class="job__description">
-                    <p class="job__name">메디코넥스 IoT개발팀</p>
-                    <p class="job__period">2019/12 ~ 2020/02</p>
-                </div>
-            </div>
+            </a>            
         </div>
     </section>
     <!-- Skills -->
@@ -109,69 +100,94 @@
             <h2>Skills & Attributes</h2>
             <p>
                 전체적인 소프트웨어 라이프 사이클에 대해서 이해하고있고
-                새로운 것을 배우는걸 좋아합니다
+                새로운 것을 배우는걸 좋아합니다<br/>
                 어떠한 상황에서도 충분히 잘 적응할 수 있으며,
-                일을할때 계획을 세우고 시간을 지켜가며 합니다
+                일을할때 계획을 세우고 시간을 지켜가며 합니다.
             </p>
-            <div class="skillset">
-                <div class="skillset__left">
-                    <h2 class="skillset__title">Skills</h2>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>HTML</span>
-                            <span>99%</span>
+            <div class="certificate">
+                <img src="./imgs/jobs/정보처리기사.jpg" alt="" width="500px">                           
+                <div class="skillset">
+                    <div class="skillset__left">
+                        <h2 class="skillset__title">Skills</h2>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>HTML</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:80%"></div>
+                            </div>
                         </div>
-                        <div class="skill__bar">
-                            <div class="skill__value" style="width:99%"></div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>CSS</span>
+                                <span>60%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:60%"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>JavaScript</span>
+                                <span>50%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:50%"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>C Language</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:80%"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>Java</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:80%"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>Python</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:80%"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>HTML</span>
-                            <span>99%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value" style="width:99%"></div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>HTML</span>
-                            <span>99%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value" style="width:99%"></div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <div class="skill__description">
-                            <span>HTML</span>
-                            <span>99%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value" style="width:99%"></div>
+                    <div class="skillset__right">
+                        <div class="tools">
+                            <h2 class="skillset__title">Tools</h2>
+                            <ul class="tools__list">
+                                <li><span>Visual Studio Code</span></li>
+                                <li><span>Visual Studio</span></li>
+                                <li><span>Android Studio</span></li>
+                                <li><span>Fill Zilla</span></li>
+                                <li><span>Putty</span></li>
+                                <li><span>Vim</span></li>
+                            </ul>
+                        </div>                        
+                        <div class="platform">
+                            <h2 class="skillset__title">platform</h2>
+                            <ul class="platform__list">
+                                <li><span>AWS</span></li>                        
+                                <li><span>GCP</span></li>                        
+                                <li><span>GitHub</span></li>                        
+                            </ul>
                         </div>
                     </div>
-                </div>
-                <div class="skillset__right">
-                    <div class="tools">
-                        <h2 class="skillset__title">Tools</h2>
-                        <ul class="tools__list">
-                            <li><span>Visual Studio Code</span></li>
-                            <li><span>Visual Studio</span></li>
-                            <li><span>Android Studio</span></li>
-                            <li><span>Fill Zilla</span></li>
-                            <li><span>Putty</span></li>
-                        </ul>
-                    </div>
-                    <div class="etc">
-                        <h2 class="skillset__title">Etc</h2>
-                        <ul class="etc__list">
-                            <li><span>Git</span></li>                        
-                        </ul>
-                    </div>
-                </div>
+                </div>     
             </div>
+            
         </div>
         
     </section>
@@ -181,31 +197,45 @@
         <h3>Projects</h3>
         <div class="work__categories">
             <button class="category__btn selected" data-filter="*">All <span class="category__count">3</span></button>
-            <button class="category__btn" data-filter="front-end">Front-end <span class="category__count">2</span></button>
+            <button class="category__btn" data-filter="front-end">Front-end <span class="category__count">1</span></button>
             <button class="category__btn" data-filter="back-end">Back-end <span class="category__count">1</span></button>
-            <button class="category__btn" data-filter="mobile">Mobile <span class="category__count">5</span></button>
+            <button class="category__btn" data-filter="mobile">Mobile <span class="category__count">1</span></button>
         </div>
 
-        <div class="work__projects">            
-            <a href="" class="project" data-type="front-end">
-                <img src="./imgs/favicon.png" alt="" class="project__img" width="300rem">
+        <div class="work__projects">        
+            <a href="https://www.k2math.co.kr" target="_blank" class="project" data-type="front-end">
+                <img src="./imgs/jobs/케이투 수학학원.PNG" alt="" class="project__img" width="300rem">
                 <div class="project__description">
-                    <h3>프론트엔드</h3>
-                    <span>Explanation</span>
+                    <h3>워드프레스</h3>
+                    <span>케이투 수학학원</span>
+                </div>
+            </a>    
+            <a href="https://louis-25.github.io/React.js_Study/" target="_blank" class="project" data-type="front-end">
+                <img src="./imgs/jobs/TodoList.PNG" alt="" class="project__img" width="300rem">
+                <div class="project__description">
+                    <h3>React.js</h3>
+                    <span>TodoList</span>
                 </div>
             </a>
-            <a href="" class="project" data-type="back-end">
-                <img src="./imgs/favicon.png" alt="" class="project__img" width="300rem">
+            <a href="https://louis-25.github.io/Clone_Coding/" target="_blank" class="project" data-type="front-end">
+                <img src="./imgs/jobs/github_clone.PNG" alt="" class="project__img" width="300rem">
                 <div class="project__description">
-                    <h3>백엔드</h3>
-                    <span>Explanation</span>
+                    <h3>HTML</h3>
+                    <span>GitHub clone-coding</span>
                 </div>
             </a>
-            <a href="" class="project" data-type="mobile">
-                <img src="./imgs/favicon.png" alt="" class="project__img" width="300rem">
+            <a href="https://github.com/louis-25/Django_Practice/tree/django_shopping" target="_blank" class="project" data-type="back-end">
+                <img src="./imgs/jobs/Django.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
-                    <h3>모바일</h3>
-                    <span>Explanation</span>
+                    <h3>Django</h3>
+                    <span>쇼핑몰 관리자페이지</span>
+                </div>
+            </a>
+            <a href="https://drive.google.com/file/d/1SC4T2m8gadtkg33AoS_5UI04_95urheK/view?usp=sharing" target="_blank" class="project" data-type="mobile">
+                <img src="./imgs/jobs/너굴앱.png" alt="" class="project__img" width="300rem">
+                <div class="project__description">
+                    <h3>안드로이드</h3>
+                    <span>너굴앱</span>
                 </div>
             </a>
         </div>
