--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Louis's Protfolio</title>
+    <title>Louis's Portfolio</title>
     <meta name="description" content="Louis's Portfolio">
     <meta name="author" content="Louis">
     <script src="https://kit.fontawesome.com/ef742d7b1a.js" crossorigin="anonymous"></script>
@@ -12,6 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ML1EGXEQ3D"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ML1EGXEQ3D');
+    </script>
 </head>
 <body>
     <!-- Navbar -->
