--- a/index.html
+++ b/index.html
@@ -233,6 +233,13 @@
                     <span>GitHub clone-coding</span>
                 </div>
             </a>
+            <a href="https://louis-25.github.io/HTML_Shopping/" target="_blank" class="project" data-type="front-end">
+                <img src="./imgs/jobs/mini_shop.PNG" alt="" class="project__img" width="300rem">
+                <div class="project__description">
+                    <h3>HTML CSS JavaScript</h3>
+                    <span>쇼핑몰 미니게임</span>
+                </div>
+            </a>    
             <a href="https://github.com/louis-25/Django_Practice/tree/django_shopping" target="_blank" class="project" data-type="back-end">
                 <img src="./imgs/jobs/Django.png" alt="" class="project__img" width="300rem">
                 <div class="project__description">
