--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     data-type="back-end"
                 >
                     <img
-                        src="./imgs/jobs/자취꿀팁.PNG"
+                        src="./imgs/jobs/자취꿀팁.png"
                         alt=""
                         class="project__img"
                         width="300rem"
