--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Louis's Portfolio</title>
         <meta name="description" content="Louis's Portfolio" />
         <meta name="author" content="Louis" />
+        <meta name="google-site-verification" content="aue7EkwjqzSSwRGqMm26pQXzGF9dcTi0mFQLz-_B4QU" />
         <script
             src="https://kit.fontawesome.com/ef742d7b1a.js"
             crossorigin="anonymous"
