--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Louis's Portfolio</title>
         <meta name="description" content="Louis's Portfolio" />
-        <meta name="author" content="Louis" />
-        <meta name="google-site-verification" content="aue7EkwjqzSSwRGqMm26pQXzGF9dcTi0mFQLz-_B4QU" />
+        <meta name="author" content="Louis" />        
         <script
             src="https://kit.fontawesome.com/ef742d7b1a.js"
             crossorigin="anonymous"
@@ -74,7 +73,7 @@
                 />
                 <h1 class="home__title">Hello <br />I'm Donghyeon</h1>
                 <h2 class="home__description">
-                    프론트엔드와 백엔드를 넘나드는 준비된인재
+                    프론트에 관심이 많은 백엔드 엔지니어
                 </h2>
                 <button class="home__contact" data-link="#contact">
                     Contact Me
@@ -240,6 +239,7 @@
                                 <ul class="platform__list">
                                     <li><span>AWS</span></li>
                                     <li><span>GCP</span></li>
+                                    <li><span>NCP</span></li>
                                     <li><span>GitHub</span></li>
                                 </ul>
                             </div>
@@ -254,13 +254,13 @@
             <h3>Projects</h3>
             <div class="work__categories">
                 <button class="category__btn selected" data-filter="*">
-                    All <span class="category__count">6</span>
+                    All <span class="category__count">7</span>
                 </button>
                 <button class="category__btn" data-filter="front-end">
-                    Front-end <span class="category__count">4</span>
+                    Front-end <span class="category__count">3</span>
                 </button>
                 <button class="category__btn" data-filter="back-end">
-                    Back-end <span class="category__count">2</span>
+                    Back-end <span class="category__count">4</span>
                 </button>
                 <button class="category__btn" data-filter="mobile">
                     Mobile <span class="category__count">1</span>
@@ -268,7 +268,7 @@
             </div>
 
             <div class="work__projects">
-                <a
+                <!-- <a
                     href="https://www.k2edu.kr"
                     target="_blank"
                     class="project"
@@ -283,6 +283,40 @@
                     <div class="project__description">
                         <h3>워드프레스</h3>
                         <span>케이투 수학학원</span>
+                    </div>
+                </a> -->
+                <a
+                    href="https://corona-114.kro.kr"
+                    target="_blank"
+                    class="project"
+                    data-type="back-end"
+                >
+                    <img
+                        src="./imgs/jobs/114_logo.png"
+                        alt=""
+                        class="project__img"
+                        width="300rem"
+                    />
+                    <div class="project__description">
+                        <h3>Spring Boot</h3>
+                        <span>Corona-114</span>
+                    </div>
+                </a>
+                <a
+                    href="https://github.com/louis-25/FinalProject-raspberry"
+                    target="_blank"
+                    class="project"
+                    data-type="back-end"
+                >
+                    <img
+                        src="https://github.com/louis-25/FinalProject-raspberry/raw/main/md-images/image-20210615104043936.png"
+                        alt="기가지니 이미지"
+                        class="project__img"
+                        width="300rem"
+                    />
+                    <div class="project__description">
+                        <h3>Python</h3>
+                        <span>GiGA Genie</span>
                     </div>
                 </a>
                 <a
