프로젝트 추가

--- a/index.html
+++ b/index.html
@@ -286,6 +286,23 @@
                     </div>
                 </a> -->
                 <a
+                    href="https://dhtube.netlify.app/"
+                    target="_blank"
+                    class="project"
+                    data-type="front-end"
+                >
+                    <img
+                        src="./imgs/jobs/DHtube.PNG"
+                        alt=""
+                        class="project__img"
+                        width="300rem"
+                    />
+                    <div class="project__description">
+                        <h3>React</h3>
+                        <span>DHtube</span>
+                    </div>
+                </a>
+                <a
                     href="https://corona-114.kro.kr"
                     target="_blank"
                     class="project"
